Bugfix for spacing of highlighted sentences

--- a/web-ui/src/app/components/tree-visualizer/tree-visualizer.component.scss
+++ b/web-ui/src/app/components/tree-visualizer/tree-visualizer.component.scss
@@ -81,6 +81,7 @@
             margin-right: 24px;
             border-bottom: 3px solid #ddd;
             font-size: 14px;
+            white-space: pre;
 
             &.has-sentence {
                 display: flex;
